# llm-values-survey

./: .gitignore  LICENSE  PRE_REGISTRATION.md  README.md  SMOKE_NOTES_v1_archive.md  SMOKE_NOTES_v2.md  pyproject.toml
data/derived/: cost_summary.csv  coverage_matrix.csv  explore_axis_consensus.csv  explore_axis_outliers.csv  explore_care_offset_per_item.csv  explore_consensus_quotes.csv  explore_disagreement_quotes.csv  h1_aggregate_per_foundation.csv  h1_per_model_per_foundation.csv  h2_mirror_asymmetry.csv  h3_pairwise_distances.csv  h3_within_vs_across_region.csv  h4_self_vs_peer_correlations.csv  per_model_fingerprints.csv  per_model_fingerprints_long.csv  refusal_rates.csv  self_report_fingerprints.csv  stability_variance.csv  verdicts_long.csv
methodology/: peer_interview_protocol.md  statistical_plan.md  validation_protocol.md
notebooks/: 00_sanity_check.ipynb
probes/: extension.json  mfq.json  mirror.json  philosophy.json  pilot.json
scripts/: aggregate.py  h1_atari_validation.py  h2_cross_cultural_asymmetry.py  h3_clustering.py  h4_self_vs_peer.py  probe_model.py  verify_roster.py
scripts/exploratory/: README.md  axis_consensus.py  care_offset_per_item.py  outlier_per_axis.py  quote_mining.py
src/llm_values/: _parsing.py  _runtime_meta.py  budget.py  cli.py  interview.py  judge.py  models.py  pricing.py  probes.py  runner.py  storage.py  types.py
tests/: conftest.py  test_budget.py  test_cli.py  test_clients_anthropic.py  test_clients_google.py  test_clients_openai_compat.py  test_interview.py  test_judge.py  test_models.py  test_pricing.py  test_probes.py  test_runner.py  test_storage.py  test_types.py
(+4 files in other folders)
