[project]
name = "llm-values-survey"
version = "0.1.0"
description = "Peer-interview methodology for eliciting and classifying language-model preferences."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "click>=8.1",
    "httpx>=0.27",
    "anthropic>=0.34",
    "openai>=1.40",
    "google-genai>=0.3",
    "tenacity>=9.0",
]

[project.scripts]
llm-values = "llm_values.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_values"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
